tests/error/ptr_ref_prim.gw
#! [contains] primitive types cannot be used as reference
typedef void my_func(int @i){}
